fixed dropdown list overlaping issue

--- a/src/assets/scss/_customDropdown.scss
+++ b/src/assets/scss/_customDropdown.scss
@@ -48,3 +48,8 @@
         }
     }
 }
+@media (max-width: 575px) {
+    .custom-dropdown .dropdown-list {
+        position: static;
+    }
+}
