--- a/src/assets/scss/_feature.scss
+++ b/src/assets/scss/_feature.scss
@@ -32,7 +32,7 @@
     // gap: 50px;
     flex-direction: column;
     align-items: start;
-    margin-right: -25%;
+    // margin-right: -25%;
     position: relative;
     z-index: 9;
 
